[gd_scene load_steps=7 format=3 uid="uid://ccdk43p76o4nw"]

[ext_resource type="Texture2D" uid="uid://cldag4twxt8p8" path="res://UI/MainUI/Assets/Button-Placeholder.png" id="1_8x4wl"]
[ext_resource type="Script" uid="uid://bg2cvg7j7ivha" path="res://UI/MainUI/Scripts/menu_holder.gd" id="1_w8hrd"]
[ext_resource type="Texture2D" uid="uid://cemmjnniwxfn6" path="res://UI/MainUI/Assets/Button-Placeholder-Pressed.png" id="2_w8hrd"]
[ext_resource type="Texture2D" uid="uid://dbechrcilflc1" path="res://UI/MainUI/Assets/Button-Placeholder-Hovered.png" id="3_7q1fj"]
[ext_resource type="PackedScene" uid="uid://dxw10u0i2gy2c" path="res://UI/Calendar/Calendar.tscn" id="5_7q1fj"]

[sub_resource type="LabelSettings" id="LabelSettings_w8hrd"]
font_color = Color(0, 0, 0, 1)

[node name="MenuHolder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w8hrd")

[node name="MainButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.873
anchor_top = -0.167
anchor_right = 1.102
anchor_bottom = 0.241
offset_left = 16.304
offset_top = 23.216
offset_right = -159.504
offset_bottom = -153.168
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("1_8x4wl")
texture_pressed = ExtResource("2_w8hrd")
texture_hover = ExtResource("3_7q1fj")

[node name="PopOutContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="CalendarButton" type="TextureButton" parent="PopOutContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("1_8x4wl")
texture_pressed = ExtResource("2_w8hrd")
texture_hover = ExtResource("3_7q1fj")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PopOutContainer/CalendarButton"]
layout_mode = 0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 60.0
text = "Calendar"
label_settings = SubResource("LabelSettings_w8hrd")
horizontal_alignment = 1

[node name="VillagerStatsButton" type="TextureButton" parent="PopOutContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("1_8x4wl")
texture_pressed = ExtResource("2_w8hrd")
texture_hover = ExtResource("3_7q1fj")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PopOutContainer/VillagerStatsButton"]
layout_mode = 0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 60.0
text = "Villagers"
label_settings = SubResource("LabelSettings_w8hrd")
horizontal_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="PopOutContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("1_8x4wl")
texture_pressed = ExtResource("2_w8hrd")
texture_hover = ExtResource("3_7q1fj")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PopOutContainer/SettingsButton"]
layout_mode = 0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 60.0
text = "Settings"
label_settings = SubResource("LabelSettings_w8hrd")
horizontal_alignment = 1

[node name="LogsButton" type="TextureButton" parent="PopOutContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("1_8x4wl")
texture_pressed = ExtResource("2_w8hrd")
texture_hover = ExtResource("3_7q1fj")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PopOutContainer/LogsButton"]
layout_mode = 0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 60.0
text = "Logs"
label_settings = SubResource("LabelSettings_w8hrd")
horizontal_alignment = 1

[node name="InventoryButton" type="TextureButton" parent="PopOutContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("1_8x4wl")
texture_pressed = ExtResource("2_w8hrd")
texture_hover = ExtResource("3_7q1fj")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PopOutContainer/InventoryButton"]
layout_mode = 0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 60.0
text = "Inventory"
label_settings = SubResource("LabelSettings_w8hrd")
horizontal_alignment = 1

[node name="VillagerEmployment" type="TextureButton" parent="PopOutContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 0
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("1_8x4wl")
texture_pressed = ExtResource("2_w8hrd")
texture_hover = ExtResource("3_7q1fj")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PopOutContainer/VillagerEmployment"]
layout_mode = 0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 60.0
text = "Manage"
label_settings = SubResource("LabelSettings_w8hrd")
horizontal_alignment = 1

[node name="Unassigned2" type="TextureButton" parent="PopOutContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 0
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("1_8x4wl")
texture_pressed = ExtResource("2_w8hrd")
texture_hover = ExtResource("3_7q1fj")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PopOutContainer/Unassigned2"]
layout_mode = 0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 60.0
text = "N/A"
label_settings = SubResource("LabelSettings_w8hrd")
horizontal_alignment = 1

[node name="Unassigned3" type="TextureButton" parent="PopOutContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 0
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("1_8x4wl")
texture_pressed = ExtResource("2_w8hrd")
texture_hover = ExtResource("3_7q1fj")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PopOutContainer/Unassigned3"]
layout_mode = 0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 60.0
text = "N/A"
label_settings = SubResource("LabelSettings_w8hrd")
horizontal_alignment = 1

[node name="Unassigned4" type="TextureButton" parent="PopOutContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 0
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("1_8x4wl")
texture_pressed = ExtResource("2_w8hrd")
texture_hover = ExtResource("3_7q1fj")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PopOutContainer/Unassigned4"]
layout_mode = 0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 60.0
text = "N/A"
label_settings = SubResource("LabelSettings_w8hrd")
horizontal_alignment = 1

[node name="Calendar" parent="." instance=ExtResource("5_7q1fj")]
layout_mode = 1

[connection signal="pressed" from="PopOutContainer/CalendarButton" to="." method="_on_calendar_button_pressed"]
[connection signal="pressed" from="PopOutContainer/VillagerStatsButton" to="." method="_on_villager_stats_button_pressed"]
[connection signal="pressed" from="PopOutContainer/LogsButton" to="." method="_on_logs_button_pressed"]
[connection signal="pressed" from="PopOutContainer/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="PopOutContainer/VillagerEmployment" to="." method="_on_villager_employment_pressed"]
